# recolor

./: CMakeLists.txt  DartConfiguration.tcl  date.txt  date2.txt  default_game2.rec  game.c  game.h  game_box.c  game_box.h  game_io.c  game_io.h  main.c  model.h  recolor_sdl.c  recolor_solve.c  recolor_text.c  solver.c  solver.h  test_game_ibecher.c  test_game_mobenamara.c  test_game_mouriche.c  test_game_oosmani.c  toto.txt
Android/: AndroidManifest.xml
Android/jni/src/: Android.mk  Makefile  game_box.c  game_box.h  recolor_sdl.c  recolor_text.c
